# google-adk-bedrock-kb-sample

./: README.md  pyproject.toml
agent1/tools/: bedrock_kb.py
src/bedrock-kb/tools/: bedrock_kb.py
src/bedrock_kb/: agent.py
src/bedrock_kb/tools/: bedrock_kb.py
src/quick_start/: agent.py
